# nyu-mem

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
dv/: CMakeLists.txt  CmakeLists.txt  MemCtrl_tl.sv  mem_ctrl.cpp
mem_generation/: Instructions.md  Sandbox.py
mem_generation/RAM/generated_mem/: RAM_Mem.gds  RAM_Mem.html  RAM_Mem.lef  RAM_Mem.lvs.sp  RAM_Mem.py  RAM_Mem.sp  RAM_Mem_FF_5p0V_25C.lib  RAM_Mem_SS_5p0V_25C.lib  RAM_Mem_TT_3p3V_25C.lib  RAM_Mem_TT_5p0V_25C.lib  functional_stim.sp
mem_generation/ROM/: ROM_Config.py  sky130_rom_1kbyte.py  sky130_rom_common.py
mem_generation/ROM/generated_mem/: ROM_Mem.gds  ROM_Mem.html  ROM_Mem.lef  ROM_Mem.lvs.sp  ROM_Mem.sp  ROM_Mem.v  ROM_Mem_SS_5p0V_25C.lib  ROM_Mem_TT_5p0V_25C.lib  functional_stim.sp
mem_generation/temp/: ROM_Mem.gds  ROM_Mem.html  ROM_Mem.lef  ROM_Mem.lvs.sp  ROM_Mem.py  ROM_Mem.sp  ROM_Mem_FF_5p0V_25C.lib  ROM_Mem_TT_3p3V_25C.lib  functional_stim.sp  sram_16x2.gds  sram_16x2.html  sram_16x2.lef  sram_16x2.lvs.sp  sram_16x2.py  sram_16x2.sp  sram_16x2.v  sram_16x2_FF_5p0V_25C.lib  sram_16x2_SS_5p0V_25C.lib  sram_16x2_TT_3p3V_25C.lib  sram_16x2_TT_5p0V_25C.lib
rtl/devices/: CMakeLists.txt  MemCtrl.sv
rtl/interfaces/: CMakeLists.txt  OpenRAM_if.sv
